<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <!--  progress bar (to show while loading) -->
    <RelativeLayout
        android:id="@+id/intro_status_block"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:layout_gravity="center">
    <ProgressBar
        android:id="@+id/intro_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:layout_above="@+id/introTextLoading"
        android:layout_centerHorizontal="true" />
    <TextView
        android:id="@+id/introTextLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/card_vertical_margin"
        android:text="@string/intro_text_loading"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/colorAccent"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />
    </RelativeLayout>


    <!-- intro page container -->
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/intro_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/main_screen_image"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:contentDescription="@string/intro_image_description"
                android:scaleType="centerCrop"
                android:src="@drawable/intro_image" />

            <!-- first block -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin">

                <TextView
                    android:id="@+id/introTextOne"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/intro_text_one"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/separator" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <!-- redirect to login page -->
                <Button
                    android:id="@+id/btnIntroSignIn"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/intro_sign_in"
                    android:textColor="@color/colorPrimary" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/separator" />

                <!-- redirect to register page -->
                <Button
                    android:id="@+id/btnIntroRegister"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/intro_register"
                    android:textColor="@color/colorPrimary" />
            </LinearLayout>
            <!-- separator -->
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/separator" />
            <!-- second block -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin">

                <TextView
                    android:id="@+id/introTextTwo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/intro_text_two"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/separator" />
            <!-- skip and see places -->
            <Button
                android:id="@+id/btnIntroSkip"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/intro_skip"
                android:textColor="@color/colorPrimary" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/separator" />
        </LinearLayout>
    </ScrollView>



</android.support.design.widget.CoordinatorLayout>