<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/TextViewSearch"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:text="@string/search"
                android:layout_weight="2"
                android:textAppearance="?android:attr/textAppearanceMedium"/>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/separator" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/EditTextSearchPlace"
            android:hint="@string/prompt_search"
            android:layout_gravity="center|center_vertical"
            android:gravity="top|start"
            android:ems="10"
            android:layout_weight="5">
            <requestFocus/>
        </EditText>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/separator" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ButtonGo"
            style="?android:attr/borderlessButtonStyle"
            android:layout_gravity="center"
            android:text="@string/go"
            android:textColor="@color/colorPrimary"
            android:layout_weight="2"
            />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/separator" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/ButtonShowRoute"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            style="?android:attr/borderlessButtonStyle"
            android:layout_weight="1"
            android:text="@string/route"
            android:layout_gravity="center"
            android:textColor="@color/colorPrimary"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />


    </LinearLayout>


    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              xmlns:map="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:id="@+id/map"
              tools:context=".MapsActivity"
              android:name="com.google.android.gms.maps.SupportMapFragment">

        <SlidingDrawer
            android:id="@+id/drawer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:topOffset="260dp"
            android:handle="@+id/handle"
            android:content="@+id/content">

            <ImageView
                android:id="@id/handle"
                android:layout_width="70dip"
                android:layout_height="60dip"
                />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@id/content"
                android:background="#FFFFFF">

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:id="@+id/placePicture"
                    android:layout_margin="15dp"
                    android:scaleType="centerCrop"
                    />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="top"
                    >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/placeTitle"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="15dp"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/separator" />

                    <Button
                        android:id="@+id/ButtonStartNavigation"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        style="?android:attr/borderlessButtonStyle"
                        android:text="@string/navigation"
                        android:layout_gravity="center"
                        android:textColor="@color/colorPrimary"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true" />


                </LinearLayout>


            </LinearLayout>

        </SlidingDrawer>

    </fragment>

</LinearLayout>


